--- a/public/ssr.html
+++ b/public/ssr.html
@@ -9,7 +9,7 @@
   <title>Dembe (SSR, Prod)</title>
   <link rel="shortcut icon" href="/favicon.ico">
   <script>___INLINED_WEBPACK_MANIFEST___</script>
-  <link href="___CSS___" rel="stylesheet" type='text/css'>
+  ___STYLES___
 
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -22,7 +22,6 @@
 
 <body>
   <div id="app">___CONTENT___</div>
-  <script src="___VENDOR___" type="text/javascript"></script>
-  <script src="___MAIN___" type="text/javascript"></script>
+  ___SCRIPTS___
 </body>
 </html>
