Redux ssr - manual dispatch on server

--- a/public/ssr.html
+++ b/public/ssr.html
@@ -22,6 +22,9 @@
 
 <body>
   <div id="app">___CONTENT___</div>
+  <script charset="utf-8" type="text/javascript">
+    window.__REDUXDATA__ = ___REDUXDATA___;
+  </script>
   ___SCRIPTS___
 </body>
 </html>
