found-relay redux integration

--- a/public/ssr.html
+++ b/public/ssr.html
@@ -24,6 +24,7 @@
   <div id="app">___CONTENT___</div>
   <script charset="utf-8" type="text/javascript">
     window.__REDUXDATA__ = ___REDUXDATA___;
+    window.__RELAYDATA__ = ___RELAYDATA___;
   </script>
   ___SCRIPTS___
 </body>
