--- a/public/ssr.html
+++ b/public/ssr.html
@@ -7,6 +7,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
   <title>Dembe (SSR, Prod)</title>
+  ___PRELOAD___
   <link rel="shortcut icon" href="/favicon.ico">
   <script>___INLINED_WEBPACK_MANIFEST___</script>
   ___STYLES___
